src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>ASC_Engineer_Contact_No__c</fullName>
        <label>ASC Engineer Contact No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASC_Engineer__c</fullName>
        <label>ASC Engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_English__c</fullName>
        <description>技术升级</description>
        <label>Account English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Type Look Up</label>
        <referenceTo>Ref_Value__c</referenceTo>
        <relationshipLabel>Work Orders (Action Type)</relationshipLabel>
        <relationshipName>Work_Orders_Action_Type_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_Count__c</fullName>
        <label>Anti-Fake Count</label>
        <summarizedField>Order__c.Anti_Fake_Count__c</summarizedField>
        <summaryForeignKey>Order__c.Work_Order_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <description>TC 固资编号</description>
        <label>AssetId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkOrderToAssignUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Center_Name__c</fullName>
        <label>Business Center Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CN H3C East</fullName>
                </value>
                <value>
                    <fullName>CN H3C North</fullName>
                </value>
                <value>
                    <fullName>CN H3C South</fullName>
                </value>
                <value>
                    <fullName>CN H3C West</fullName>
                </value>
                <value>
                    <fullName>CN H3C Other</fullName>
                </value>
                <value>
                    <fullName>CN ISS</fullName>
                    <isActive>false</isActive>
                    <label>CN ISS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Risk__c</fullName>
        <label>Business Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CATCH_III__c</fullName>
        <description>Only for RCE L2，关闭工单时需要提示用户填写此字段，若没有填写则提示，有内容则保持即可</description>
        <label>CATCH III</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_COMMIT_NOTES__c</fullName>
        <description>CE 工程师上传的NOTE</description>
        <label>CE COMMIT NOTES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CE_Progress__c</fullName>
        <label>CE_Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enroute</fullName>
                </value>
                <value>
                    <fullName>Start &amp; Arrival</fullName>
                </value>
                <value>
                    <fullName>Fix</fullName>
                </value>
                <value>
                    <fullName>Finish &amp; Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToCE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>HP Onsite</fullName>
                </value>
                <value>
                    <fullName>Partner Onsite</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>CPR-Elevation</fullName>
                </value>
                <value>
                    <fullName>CPR-ESC-CSM</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Ent Exception</fullName>
                </value>
                <value>
                    <fullName>FMN CSO</fullName>
                </value>
                <value>
                    <fullName>FMN CSO AutoRelease</fullName>
                </value>
                <value>
                    <fullName>Logistics Order</fullName>
                </value>
                <value>
                    <fullName>Transfer to CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_CE_Change_DT__c</fullName>
        <description>DP最后一次派单给CE的时间</description>
        <label>CSC_CE_Change_Last_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_HPE_SubCase_ID__c</fullName>
        <externalId>true</externalId>
        <label>HPE WorkOrder ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSC_Process_QA_Change_DT__c</fullName>
        <label>CSC_Process_QA_Change_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Product_Description__c</fullName>
        <formula>Case.CSC_Product_Description__c</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Product_Family__c</fullName>
        <formula>Case.CSC_Product_Family__c</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Product_Line__c</fullName>
        <formula>Case.CSC_Product_Line__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Product_Number__c</fullName>
        <formula>Case.CSC_PN__c</formula>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_CE_OWNER_DT__c</fullName>
        <label>CE OWNER DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_CE_OWNER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE OWNER</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToCEs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_DP_Dispatch_CE_Dt__c</fullName>
        <label>DP_Dispatch_CE_Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_DP_Dispatch_CE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DP Dispatch CE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToDPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_RCE_USER_Dt__c</fullName>
        <label>RCE USER Dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_RCE_USER_MANAGER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RCE USER MANAGER</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToRceM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_REPORT_RCE_USER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RCE USER</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WoToRce</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Activitylog_Work_Group__c</fullName>
        <label>Activitylog Work Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Assign_L2_Time__c</fullName>
        <label>Assign L2 Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CE_Manager__c</fullName>
        <formula>CE__r.Manager.LastName +  CE__r.Manager.FirstName</formula>
        <label>CE Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_CE_Workgroup__c</fullName>
        <formula>TEXT( CE__r.Workgroup__c )</formula>
        <label>CE Workgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Closer_Loginname__c</fullName>
        <formula>Subcase_Employee_Closer__r.Username</formula>
        <label>Closer Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_EmployeeId__c</fullName>
        <formula>CreatedBy.Employee_ID__c</formula>
        <label>Creater EmployeeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_Profile__c</fullName>
        <formula>IF(CreatedBy.Profile.Name = &apos;CSC&amp;FST CA&apos;, &apos;CA&apos;,  
 IF(CreatedBy.Profile.Name = &apos;CSC&amp;FST RCE&apos;, &apos;RCE&apos;,  
 IF(CreatedBy.Profile.Name = &apos;CSC&amp;FST DP&apos;, &apos;DP&apos;,  
 IF(CreatedBy.Profile.Name = &apos;CSC&amp;FST RCE L2&apos;, &apos;RCE L2&apos;, &apos;OTHER&apos;) ) ) )</formula>
        <label>Creater Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Creater_Workgroup__c</fullName>
        <label>Creater Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DP_Dispatch_CE_Employeeid__c</fullName>
        <label>DP Dispatch CE Employeeid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DP_Loginname__c</fullName>
        <formula>DP__r.Username</formula>
        <label>DP Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_DP_Manager__c</fullName>
        <label>DP Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Dispatch_Supervisor_For_Case__c</fullName>
        <label>Dispatch Supervisor For Case</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Dp_Assign_Time_Type__c</fullName>
        <formula>IF( OR(MOD( DATEVALUE( CSC_REPORT_DP_Dispatch_CE_Dt__c ) - DATE( 1900, 1, 7 ), 7 )= 1, 
MOD( DATEVALUE(CSC_REPORT_DP_Dispatch_CE_Dt__c) - DATE( 1900, 1, 7 ), 7 )= 2, 
MOD( DATEVALUE(CSC_REPORT_DP_Dispatch_CE_Dt__c) - DATE( 1900, 1, 7 ), 7 )= 3, 
MOD( DATEVALUE(CSC_REPORT_DP_Dispatch_CE_Dt__c) - DATE( 1900, 1, 7 ), 7 )= 4, 
MOD( DATEVALUE(CSC_REPORT_DP_Dispatch_CE_Dt__c) - DATE( 1900, 1, 7 ), 7 )= 5), 
IF( 
AND( VALUE(TEXT(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),12,2))+8)+ 
IF(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),15,2))&lt;10, 
&quot;0&quot; + TEXT(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),15,2))), 
TEXT(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),15,2)))) )&gt;830, 
VALUE(TEXT(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),12,2))+8)+ 
IF(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),15,2))&lt;10, 
&quot;0&quot; + TEXT(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),15,2))), 
TEXT(value(MID(TEXT(CSC_REPORT_DP_Dispatch_CE_Dt__c),15,2)))) )&lt;1800), 
&quot;Office Hour&quot;, 
&quot;Night Shift&quot;), 
&quot;Weekend&quot;)</formula>
        <label>Dp Assign Time Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Elevate_Time_L1__c</fullName>
        <formula>(CSC_Report_L1_elevate_to_L2_Q__c- CreatedDate )*24*60 + VALUE(MID(TEXT(CSC_Report_L1_elevate_to_L2_Q__c),12,2)) - VALUE(MID(TEXT(CreatedDate ),12,2))*60 + (( VALUE(MID(TEXT(CSC_Report_L1_elevate_to_L2_Q__c),15,2)) - VALUE(MID(TEXT(CreatedDate ),15,2))))</formula>
        <label>Elevate Time L1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Elevate_Time_L2__c</fullName>
        <formula>(CSC_Report_elevate_case_close__c - CSC_Report_L1_elevate_to_L2_Q__c)*24*60 + VALUE(MID(TEXT(CSC_Report_elevate_case_close__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_L1_elevate_to_L2_Q__c),12,2))*60 + (( VALUE(MID(TEXT(CSC_Report_elevate_case_close__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_L1_elevate_to_L2_Q__c ),15,2))))</formula>
        <label>Elevate Time L2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Installation_Period__c</fullName>
        <formula>Subcase_Onsite_Fixed_Date__c - Case.CreatedDate</formula>
        <label>Installation Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_L1_RC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L1 RC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Report_L1_RC_login_name__c</fullName>
        <formula>CSC_Report_L1_RC__r.Username</formula>
        <label>L1 RC login name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_L1_elevate_to_L2_Q__c</fullName>
        <label>time of L1 elevate to L2 Q</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_L1_workgroup__c</fullName>
        <label>L1 workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_L2_accept_case_from_elevate_Q__c</fullName>
        <label>Time of L2 accept case from elevate Q</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_L2_response_time__c</fullName>
        <formula>(CSC_Report_L2_accept_case_from_elevate_Q__c - CSC_Report_L1_elevate_to_L2_Q__c)*24*60 + VALUE(MID(TEXT(CSC_Report_L2_accept_case_from_elevate_Q__c ),12,2)) - VALUE(MID(TEXT(CSC_Report_L1_elevate_to_L2_Q__c),12,2))*60 + (( VALUE(MID(TEXT(CSC_Report_L2_accept_case_from_elevate_Q__c ),15,2)) - VALUE(MID(TEXT(CSC_Report_L1_elevate_to_L2_Q__c),15,2))))</formula>
        <label>L2 response time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Employee_ID__c</fullName>
        <formula>Owner:User.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Manager_FName__c</fullName>
        <formula>Owner:User.Manager.FirstName</formula>
        <label>Owner Manager First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Manager_LName__c</fullName>
        <formula>Owner:User.Manager.LastName</formula>
        <label>Owner Manager Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Manager_Loginname__c</fullName>
        <formula>Owner:User.Manager.Username</formula>
        <label>Owner Manager Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Manager_Workgroup__c</fullName>
        <label>Owner Manager Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner_Team__c</fullName>
        <label>WorkOrder Owner Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Partner_Owner__c</fullName>
        <formula>if( Owner:User.Profile.Name==&apos;CSC&amp;FST ASC&apos; || Owner:User.Profile.Name==&apos;CSC&amp;FST CE&apos;,TRUE,FALSE)</formula>
        <label>Partner Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Parts_Qty__c</fullName>
        <label>Parts Qty</label>
        <summarizedField>Order__c.Qty__c</summarizedField>
        <summaryForeignKey>Order__c.Work_Order_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSC_Report_QACode__c</fullName>
        <label>QA Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_QTY__c</fullName>
        <formula>Subcase_Estimated_Task_Duration__c / 1.5</formula>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_RR_Total_Time__c</fullName>
        <formula>(Subcase_Close_Date__c - CreatedDate)*24 + VALUE(MID(TEXT(Subcase_Close_Date__c),12,2)) - VALUE(MID(TEXT(CreatedDate),12,2)) + (( VALUE(MID(TEXT(Subcase_Close_Date__c),15,2)) - VALUE(MID(TEXT(CreatedDate),15,2)))/60)</formula>
        <label>RR Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Subcase_DAH__c</fullName>
        <description>Workorder Onsite Stop Date - Workorder Onsite Start Date</description>
        <formula>(Subcase_Onsite_Stop_Date__c - Subcase_Onsite_Start_Date__c)*24</formula>
        <label>WorkOrder DAH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Subcase_DLH__c</fullName>
        <formula>Subcase_Travel_Time__c +  CSC_Report_Subcase_DAH__c</formula>
        <label>WorkOrder DLH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_WOFix_CaseOpen__c</fullName>
        <formula>Subcase_Onsite_Fixed_Date__c -  Case.CreatedDate</formula>
        <label>WOFix_CaseOpen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_WO_creater_manager_loginnane__c</fullName>
        <label>Workorder Creater Manager Loginnane</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_WorkOrder_Owner_Workgroup__c</fullName>
        <label>WorkOrder Owner Workgroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Workorder_Create_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Workorder Create DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Workorder_Owner_Loginname__c</fullName>
        <formula>Owner:User.Username</formula>
        <label>Workorder Owner Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Workorder_note_log__c</fullName>
        <label>Workorder note log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Workorder_phone_log__c</fullName>
        <label>Workorder phone log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Workorder_research_log__c</fullName>
        <label>Workorder research log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Report_X_Elevation_Level__c</fullName>
        <formula>IF(  OR(RecordType.DeveloperName &lt;&gt; &apos;RCE_L2&apos;, Owner:User.Profile.Name = &apos;CSC&amp;FST RCE L2&apos;) ,    
     &apos;Green&apos;, 
     IF( Elevate_To_L3__c = False, &apos;Yellow&apos;, &apos;Red&apos;) )</formula>
        <label>X Elevation Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_elevate_case_close__c</fullName>
        <label>Time of elevate case close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_SLA_Target_Mins_With_1B__c</fullName>
        <formula>if(Process_QA_Is_1B__c==true, 
CASE(SLA_Type__c, 
&apos;CTR&apos;, 45, 
&apos;SBD&apos;, 90, 
&apos;NBD&apos;, 210, 
0)+24*60, 
CASE(SLA_Type__c, 
&apos;CTR&apos;, 45, 
&apos;SBD&apos;, 90, 
&apos;NBD&apos;, 210, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC SLA Target Mins With 1B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_SN__c</fullName>
        <formula>Case.CSC_SN__c</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Severity__c</fullName>
        <description>技术升级 Severity</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Subcase_Delay_Code__c</fullName>
        <label>WorkOrder Delay Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-Response Met</fullName>
                </value>
                <value>
                    <fullName>1-Returned to office for resource</fullName>
                </value>
                <value>
                    <fullName>2-Parts Issue</fullName>
                </value>
                <value>
                    <fullName>3-No CE Resources Available</fullName>
                </value>
                <value>
                    <fullName>4-CSO sent to wrong CE</fullName>
                </value>
                <value>
                    <fullName>5-Travel Delay</fullName>
                </value>
                <value>
                    <fullName>6-No Trained/Qualified CE Available</fullName>
                </value>
                <value>
                    <fullName>7-Subcase recd Late from Call Center</fullName>
                </value>
                <value>
                    <fullName>8-Customer caused Delay</fullName>
                </value>
                <value>
                    <fullName>9-Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Subcase_Repair_Class_Code__c</fullName>
        <label>WorkOrder Repair Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>HM</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NR</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SV</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>UC</fullName>
                </value>
                <value>
                    <fullName>WK</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>ML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Subcase_Resolution__c</fullName>
        <label>WorkOrder Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Document Sent</fullName>
                </value>
                <value>
                    <fullName>Information Provided</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Onsite Solution</fullName>
                </value>
                <value>
                    <fullName>Prformnc Tuned/Chckd</fullName>
                </value>
                <value>
                    <fullName>SW Cause unknown</fullName>
                </value>
                <value>
                    <fullName>SW Doc/Training</fullName>
                </value>
                <value>
                    <fullName>SW Problem Known</fullName>
                </value>
                <value>
                    <fullName>SW Problem new</fullName>
                </value>
                <value>
                    <fullName>SW Shipped</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Admin Close</fullName>
                </value>
                <value>
                    <fullName>Auto-Close</fullName>
                </value>
                <value>
                    <fullName>Cancel per Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Self-solve</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>No Contact Made</fullName>
                </value>
                <value>
                    <fullName>No Recommendation</fullName>
                </value>
                <value>
                    <fullName>No Trouble found</fullName>
                </value>
                <value>
                    <fullName>Void Call</fullName>
                </value>
                <value>
                    <fullName>Parts Shipped</fullName>
                </value>
                <value>
                    <fullName>Please Specify</fullName>
                </value>
                <value>
                    <fullName>Remote Resolve</fullName>
                </value>
                <value>
                    <fullName>Repair Complete</fullName>
                </value>
                <value>
                    <fullName>Revisit</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Replace Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_TAT_Missed__c</fullName>
        <formula>IF(RCE_TAT_Missed__c + Dispatch_TAT_Missed__c &gt; 1, 1, 
RCE_TAT_Missed__c + Dispatch_TAT_Missed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC TAT Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Billing_Street__c</fullName>
        <formula>Case.Billing_Street__c</formula>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_City__c</fullName>
        <formula>Text(Case.City__c)</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Province__c</fullName>
        <formula>Text(Case.Province__c)</formula>
        <label>Case Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type2__c</fullName>
        <formula>TEXT( Case.CSC_Case_Type2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_With_100_Diagnosis_Accuracy__c</fullName>
        <formula>if(CSC_REPORT_DP_Dispatch_CE_Dt__c&lt;Subcase_Onsite_Start_Date__c,1,0)</formula>
        <label>Case With 100 Diagnosis Accuracy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_status__c</fullName>
        <description>h3c ce 上岗证状态</description>
        <label>Certificate status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>City__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>City_RT</value>
            </filterItems>
            <filterItems>
                <field>$Source.Province_Lookup__c</field>
                <operation>equals</operation>
                <valueField>City__c.Province_Name__c</valueField>
            </filterItems>
            <infoMessage>请先选择省份再选择城市</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>工作订单 (City Lookup)</relationshipLabel>
        <relationshipName>WorkOrderToCity</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>